# thermalConductivityMPI

./: .gitignore  CMakeLists.txt  compute_new_temperature.py  config.txt  create_gif.py  matrix.txt  matrix_generator.py
headers/: config_reader.h  finite_differences.h  heatmap.h  matrix.h  mpi_transactions.h  utils.h
src/: config_reader.cpp  finite_differences.cpp  heatmap.cpp  main.cpp  matrix.cpp  mpi_transactions.cpp  utils.cpp
